<resources>
    <string name="app_name">Selling App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username_or_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="Re_enter_your_password"> Confirm your password</string>
    <string name="enter_your_phone_number_or_email"> enter your phone number or email.</string>
    <string name="title_login">Log In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="manufacturers">Manufacturers</string>
    <string name="product">Products</string>
    <string name="price">price</string>
    <string name="smart_shop">Smart shop</string>
    <string name="separation">/</string>
    <string name="good_to_see_you">Good to see you!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="log_in_with">log in with</string>
    <string name="google">Google</string>
    <string name="to_access_all_the_features">To access all the features</string>
    <string name="i_agree_to_all_the">I agree to all the</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="enter_name_product">enter name product ...</string>
    <string name="hello_name_user">Hello Vanh Hụt Hoa !</string>
    <string name="create_account_successfully">create account successfully</string>
    <string name="press_back_one_more_time_to_exit">Press back one more time to exit</string>
    <string name="title_sale">Biaya Sepatu Rebook\n dengan discount 15%</string>
    <string name="buy_now">Buy Now</string>
    <string name="name_product">Iphone 14 pro max</string>
    <string name="price_prodcut">26.690.000 đ</string>
    <string name="default_emai">defaultEmail@email.com</string>
    <string name="switch_to_dark_mode">Switch to Dark Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="my_oder">My Oder</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_comment">enter your comment</string>
    <string name="th_ng_s_rom">thông số rom</string>
    <string name="rom">Rom</string>
    <string name="th_ng_s_ram">thông số ram</string>
    <string name="ram">Ram</string>
    <string name="th_ng_s_gpu">thông số gpu</string>
    <string name="th_ng_s_cpu">thông số cpu</string>
    <string name="th_ng_s_chip">thông số chip</string>
    <string name="chipset">Chipset</string>
    <string name="cpu">CPU</string>
    <string name="th_ng_tin_gi">thông tin giá</string>
    <string name="t_n_s_n_ph_m">tên sản phẩm</string>
    <string name="name">Name</string>
    <string name="gpu">GPU</string>
    <string name="show_more">Show more ...</string>
    <string name="description">Description:</string>
    <string name="this_is_description">this is description</string>
    <string name="rate_and_comment">Rate and comment</string>
    <string name="save">save</string>
    <string name="detail">Detail:</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="count">10 / 10</string>
    <string name="specifications">Specifications</string>
    <string name="ram_amp_storage"><![CDATA[Ram & Storage]]></string>
    <string name="screen">Screen</string>
    <string name="screen_size">Screen size</string>
    <string name="screen_technology">Screen technology</string>
    <string name="screen_features">Screen features</string>
    <string name="screen_type">Screen type</string>
    <string name="camera">Camera</string>
    <string name="font_camera">Font camera</string>
    <string name="rear_camera">Rear camera</string>
    <string name="other">Other</string>
    <string name="battery">Battery</string>
    <string name="operating_system">Operating system</string>
    <string name="internet">Internet</string>
    <string name="weight">Weight</string>
    <string name="audio_technology">Audio technology</string>
    <string name="special_features">Special features</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity:</string>
    <string name="status">Status</string>
    <string name="name_color">black</string>
    <string name="edit_image">Edit image</string>
    <string name="please_enter_email">* Please enter email</string>
    <string name="please_enter_password">* Please enter password</string>
    <string name="please_re_enter_password">* Please re-enter password</string>
    <string name="email_already_exists">* Email already exists</string>
    <string name="password_can_more_than_6_characters">* password can more than 6 characters</string>
    <string name="please_enter_the_correct_password">* Please enter the correct password</string>
    <string name="required">* required</string>
    <string name="wrong_account_or_password">* wrong account or password</string>
    <string name="must_not_be_left_blank">* must not be left blank</string>
    <string name="username_default">username</string>
    <string name="email_default">email@gmail.com</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_password">Remember password</string>
    <string name="invalid_email_format">* Invalid email format</string>
    <string name="all">All</string>
    <string name="full_name">Enter full Name</string>
    <string name="enter_username">Enter username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_profile">My Profile</string>
</resources>