<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".components.activities.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/id_title_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/title_sign_up"
                    android:textColor="@color/gray69"
                    android:textSize="@dimen/h2"
                    android:transitionName="transition" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/separation"
                    android:textColor="#152B36"
                    android:textSize="@dimen/h2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/title_login"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/h2" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/good_to_see_you"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/h7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/box_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_88sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/h7" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edittext_border"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/hint_username_or_email"
                    android:imeOptions="actionNext"
                    android:inputType="text|textEmailAddress"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/h7" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/error_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="* error"
                android:textColor="@color/red"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_email">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/h7" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray69">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/color_hint"
                    android:textSize="@dimen/h7"
                    android:paddingStart="@dimen/_10sdp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/error_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="* error"
                android:textColor="@color/red"
                android:visibility="gone"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box_password">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/button_border"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/h4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_20sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/or"
                android:textSize="@dimen/h7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/log_in_with"
                    android:textSize="@dimen/h7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/google"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h6" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>